--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ ios/Pods/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+.expo/README.md
+EXPO_SETUP.md
